# TreeCat

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: TreeBuilder.h  TreeNode.h  TreePrinter.h  Utils.h
src/: TreeBuilder.cpp  TreePrinter.cpp  main.cpp
